--- a/css/rocket.css
+++ b/css/rocket.css
@@ -9,7 +9,7 @@
 }
 
 .right{
-	background-color: aliceblue;
+	background-color: none;
 	position: fixed;
 	width: 50%;
 	height: 100%;
@@ -19,25 +19,43 @@
 }
 
 .ground{
-	background-color: green;
+	background: url('../img/ground.png') no-repeat center center ;
 	position: absolute;
 	bottom: 0;
-	left: 0;
+	left: 9px;
 	width: 100%;
-	height: 20px
+	height: 20px;
 }
 .rocket{
 	position: absolute;
-	left: 50%;
-	bottom: 20px;
-	width: 20px;
-	height: 100px;
-	background-color: blue; 
+	left: 36%;
+	bottom: 5px;
+	width: 159px;
+	height: 232px;
+	background: url('../img/rocket1.png') no-repeat 0 0; 
 	transition: bottom 10000ms;
 }
 
 body.body-state1 .rocket{
 	transition: none;
+}
+
+/*rocket bg image*/
+body.body-state2 .rocket{
+	bottom: 20px;
+	background-image: url('../img/rocket2.png');
+}
+
+body.body-state3 .rocket,
+body.body-state4 .rocket{
+	width: 159px;
+	height: 309px;
+	background-image: url('../img/rocket3.png');
+}
+body.body-state5 .rocket{
+	background-image: url('../img/Boom.png');
+	width: 159px;
+	height: 232px;
 }
 
 body.body-state3 .rocket,
